# ruff-testing

./: LICENSE  README.md  pyproject.toml
.github/workflows/: github.yaml  sarif.yaml
foo/: bar.py
