[tool.poetry]
name = "foo"
version = "0.0.0"
description = ""
authors = ["Arthur Deierlein <info@c0rydoras.dev>"]
readme = "README.md"
license = "BSD-3-Clause-No-Nuclear-License"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
